--- a/pypy2/python.pypy.nuspec
+++ b/pypy2/python.pypy.nuspec
@@ -23,6 +23,7 @@
     <releaseNotes>https://doc.pypy.org/en/latest/release-v7.3.1.html</releaseNotes>
     <dependencies>
       <dependency id="vcredist2008"/>
+      <dependency id="kb2919355"/>
     </dependencies>
   </metadata>
   <files>
